[gd_scene load_steps=4 format=3 uid="uid://xwf4h0olv2xn"]

[ext_resource type="Script" uid="uid://bhq7qsdevhaqo" path="res://src/2_settings/settings.gd" id="1_a02d4"]
[ext_resource type="Texture2D" uid="uid://cycq1tqj8xjxr" path="res://assets/settings_background.png" id="2_bg6d8"]
[ext_resource type="PackedScene" uid="uid://ci4uj02mvx8ah" path="res://src/interactables/path_to/path_to_interactable.tscn" id="3_p84u6"]

[node name="Settings" type="Window"]
initial_position = 2
size = Vector2i(565, 160)
transient = true
transient_to_focused = true
exclusive = true
script = ExtResource("1_a02d4")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bg6d8")
expand_mode = 1
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 6.0
offset_right = -8.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2

[node name="PathToNwf" parent="VBoxContainer" instance=ExtResource("3_p84u6")]
layout_mode = 2
file_type_filter = PackedStringArray("*.nwf")
file_mode = 0
label_name = "Path to .nwf"

[node name="PathToTempOutput" parent="VBoxContainer" instance=ExtResource("3_p84u6")]
layout_mode = 2
file_mode = 2
label_name = "Path to temporary output"

[node name="PathToModsFolder" parent="VBoxContainer" instance=ExtResource("3_p84u6")]
layout_mode = 2
file_mode = 2
label_name = "Path to mods folder"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="OkButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "OK"
